# bevy-raymarching-prototype

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
assets/: math.wgsl
assets/cuda/compiled/: my_struct_kernel.ptx
assets/cuda/includes/: my_struct.h
assets/shaders/: color.wgsl  phong_reflection_model.wgsl  ray_marcher.wgsl  render.wgsl  render_buffers.wgsl  render_ray_marching.wgsl  render_scene_sd.wgsl  renderer.wgsl  signed_distance.wgsl  utils.wgsl
cuda/includes/: bindings.h  color.cu  ray_marching.cu  rendering.cu  signed_distance.cu  terrain_rendering.cu  types.cu  utils.cu  utils.h
cuda/kernels/: ray_marching.cu  renderer.cu  signed_distance.cu
cuda/modules/: common.cu  compute_compressed_depth.cu  compute_render.cu  compute_render_finalize.cu  main.cu
src/: cudarc_extension.rs  data.rs  example_scene.rs  input_handling.rs  main.rs  renderer.rs
src/bindings/: cuda.rs  mod.rs
src/renderer/: mod.rs  scene.rs  types.rs
