[package]
name = "bevy-raymarching-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_editor_pls = "0.7.0"
bevy_flycam = "0.12.0"
bytemuck = "1.14.0"

[build-dependencies]
syn = "2.0.48"
proc-macro2 = "1.0.76"
regex = "1.10.2"
quote = "1.0.35"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
